# Secure_Chat

./: Cargo.toml  README.md  log_thread_splitter.py
Logs/: grc.config
src/: crypto.rs  lib.rs  main.rs  network.rs  network_tokio_old.rs  rustls_server_example.rs
tests/: test.rs
