[package]
name = "secure_chat"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
text_io = "0.1.8"
rustls = "0.17.0"
tokio = {version="0.2",features=["full"]}
log = "0.4.8"
simplelog = "0.8.0"
futures="0.3"